# muc-python3

./: $OUTPUT_FILE  .clinerules  .gitignore  .gitmodules  ACTUAL_DIFFERENCES_FOUND.md  AGENTS.md  COMMAND_PARITY_STATUS.md  CRITICAL_DIFFERENCES.md  Cargo.toml  FINAL_TEST_REPORT.md  FINAL_TEST_SUMMARY.md  MIGRATION_REPORT.md  MUD_CHARACTER_CREATION_COMPLETE.md  MUD_DEVELOPMENT_SUMMARY.md  README.md  TEST_REPORT.md  TEST_RESULTS.md  TEST_SUMMARY.md  auto_create_char.py  clearup.sh  client.py  compare_stories.py  count_doumi.py  cp949.sh  demo_char_creation.py  full_compare.py  full_comparison_report.txt  iconv.sh  interactive_mud_test.py  l.py  loader.py  loop.py  muc2json.py  mud_interactive.py  quick_compare.py  redirector.py  run_comprehensive_test.py  run_murim.sh  rust_test_report_20260216_230819.txt  rust_test_report_20260216_232156.txt  (+130 more)
.claude/: ralph-loop.local.md
cmds/: 2to3.bat  API_현황.md  __combat_tick.rhai  __death.rhai  __entry_events.rhai  __movement.rhai  __summon_move.rhai  attack.rhai  comm.py  comm.rhai  debug_test.rhai  help.rhai  inventory.rhai  look.rhai  master.rhai  say.rhai  test.rhai  test_output.rhai  test_simple.rhai  test_syntax.rhai  가져.py  가져.rhai  값값.py  값값.rhai  값삭제.py  값삭제.rhai  값설정.py  값설정.rhai  공지말.py  공지말.rhai  공지사항.py  공지사항.rhai  구입.py  구입.rhai  귀환.py  귀환.rhai  기부.py  기부.rhai  기연.py  기연.rhai  (+368 more)
docs/: .bkit-memory.json  .pdca-status.json  AGENTS_구조_체크리스트.md  ARCHITECTURE_REVIEW.md  ATTACK_FLEE_COMMAND_PARITY.md  BOX_COMMAND_PARITY.md  DRIVER_MUDLIB_ARCHITECTURE.md  EFUN_RHAI_CONVENTION.md  INVENTORY_STORAGE_PARITY.md  ITEM_PACKAGE.md  (+11 more)
(+254 files in other folders)
