[package]
name = "muc_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON처리
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 비동기 런타임
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 바이트 처리
bytes = "1.7"

# 인코딩 변환 (UTF-8 기준, EUC-KR 미지원)
encoding = "0.2"

# 문자열 처리
unicode-segmentation = "1.11"
regex = "1.10"

# 에러 처리
anyhow = "1.0"
thiserror = "1.0"

# 로깅
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 동시성
parking_lot = "0.12"
dashmap = "6.1"

# 한글 처리
once_cell = "1.19"

# 난수 생성
fastrand = "2.1"
rand = "0.8"

# 스크립팅 (Rhai)
# unicode-xid-ident: 한글 변수명 지원을 위해 필요
rhai = { version = "1.19", features = ["serde", "unchecked", "unicode-xid-ident"] }

# 파일 감시 (핫리로딩)
notify = "6.1"

# UUID 생성 (call_out task IDs)
uuid = { version = "1.10", features = ["v4", "serde"] }

# 시간 처리
chrono = "0.4"

# SHA-512 비밀번호 해시
sha2 = "0.10"
